--- a/index.html
+++ b/index.html
@@ -40,4 +40,4 @@ with a passion for software development and problem-solving. Please check out my
   Email: \u001b[1mwzuneail@gmail.com\u001b[0m
   LinkedIn: \u001b[1mlinkedin.com/in/zuneail-wahid\u001b[0m
 
-\u001b[44mThanks for visiting via curl!\u001b[0m
+Thanks for visiting via curl!
