--- a/index.html
+++ b/index.html
@@ -1,43 +1,42 @@
-\u001b[36m=====================================
-\u001b[1mZUNEAIL WAHID — COMPUTER SCIENCE B.A.\u001b[0m
-\u001b[36m=====================================\u001b[0m
+[36m=====================================
+[1mZUNEAIL WAHID — COMPUTER SCIENCE B.A.[0m
+[36m=====================================[0m
 
-\u001b[33mAbout:\u001b[0m
+[33mAbout:[0m
 Hello! I'm Zuneail Wahid, a senior at CUNY Queens College pursuing a Computer Science B.A.
 with a passion for software development and problem-solving. Please check out my projects and skills below!
 
-\u001b[33mLanguages:\u001b[0m
-  \u001b[32m- C++
+[33mLanguages:[0m
+  [32m- C++
   - Java
   - Python
   - JavaScript
   - HTML/CSS
   - SQL
-  - Bash\u001b[0m
+  - Bash[0m
 
-\u001b[33mProjects (All found on GitHub):\u001b[0m
-  \u001b[32m- System Calls & Employee Salary (C++)\u001b[0m
+[33mProjects (All found on GitHub):[0m
+  [32m- System Calls & Employee Salary (C++)[0m
     A low-level C++ project that uses POSIX system calls to build a persistent,
     file-based hash table for storing and retrieving employee salaries. It parses
     a text file, handles collisions with linear probing, and writes to a binary
     file for fast lookups.
 
-  \u001b[32m- Interprocess Communication (IPC) (C++)\u001b[0m
+  [32m- Interprocess Communication (IPC) (C++)[0m
     A C++ program demonstrating bidirectional interprocess communication using
     unnamed pipes and forked processes. The parent reads from a source file and
     sends data to a child, which writes it to both the terminal and a new file,
     then returns the character count. Built for Unix-like systems using low-level
     POSIX calls.
 
-  \u001b[32m- Flashcards Web App (React)\u001b[0m
+  [32m- Flashcards Web App (React)[0m
     A simple flashcard app built in React for interactive studying. Displays a deck
     with a title, description, and total cards. Users can flip cards to see answers
-    and click to view random cards. Completed as a 2-hour project with clean UI and
-    randomized card navigation.
+    and click to view random cards. 
 
-\u001b[33mContact:\u001b[0m
-  GitHub: \u001b[1mgithub.com/zuneail\u001b[0m
-  Email: \u001b[1mwzuneail@gmail.com\u001b[0m
-  LinkedIn: \u001b[1mlinkedin.com/in/zuneail-wahid\u001b[0m
+[33mContact:[0m
+  GitHub: [1mhttps://github.com/zuneail[0m
+  Email: [1mwzuneail@gmail.com[0m
+  LinkedIn: [1mhttps://linkedin.com/in/zuneail-wahid[0m
 
 Thanks for visiting via curl!
