--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 [33mAbout:[0m
 Hello! I'm Zuneail Wahid, a senior at CUNY Queens College pursuing a Computer Science B.A.
-with a passion for software development and problem-solving. Please check out my projects and skills below!
+with a passion for software development and problem-solving. Please check out my projects 
+and skills below!
 
 [33mLanguages:[0m
   [32m- C++
@@ -39,4 +40,4 @@ with a passion for software development and problem-solving. Please check out my
   Email: [1mwzuneail@gmail.com[0m
   LinkedIn: [1mhttps://linkedin.com/in/zuneail-wahid[0m
 
-Thanks for visiting via curl!
+ [44mThanks for visitng via curl![0m
