--- a/index.html
+++ b/index.html
@@ -40,4 +40,4 @@ and skills below!
   Email: [1mwzuneail@gmail.com[0m
   LinkedIn: [1mhttps://linkedin.com/in/zuneail-wahid[0m
 
- [44mThanks for visitng via curl![0m
+[44m Thanks for visitng via curl![0m
